libglvnd (1.0.0-2) UNRELEASED; urgency=medium

  * Use source format 3.0 (quilt).
  * kfreebsd-hurd.patch: New, fix FTBFS on kFreeBSD and Hurd.
    (Closes: #870445)
  * Add bug-control file to report whether the proprietary nvidia driver is
    installed.

 -- Andreas Beckmann <anbe@debian.org>  Sat, 25 Nov 2017 14:59:46 +0000

libglvnd (1.0.0-1) unstable; urgency=high

  [ Andreas Boll ]
  * Add versioned libglvnd0 dependencies (Workaround for #878851).
  * Raise Priority to optional.
  * Bump standards version to 4.1.1.

  [ Timo Aaltonen ]
  * New upstream release.
  * Add a watch file for uscan.
  * libgles2.symbols: Updated.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 09 Nov 2017 12:14:14 +0200

libglvnd (0.2.999+git20170802-5) unstable; urgency=medium

  * control: Mark libglvnd-dev and -core-dev as M-A: same.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 28 Sep 2017 23:04:06 +0300

libglvnd (0.2.999+git20170802-4) unstable; urgency=medium

  * control: libglvnd-dev Breaks/Replaces old libegl1-mesa-dev/libgl1-
    mesa-dev/libgles2-mesa-dev. (Closes: #875446)

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 12 Sep 2017 10:32:47 +0300

libglvnd (0.2.999+git20170802-3) unstable; urgency=medium

  [ Timo Aaltonen ]
  * control: Add Breaks/Replaces to match mesa upload which enabled
    GLVND. (Closes: #870686)
  * control: Add back depends on default libegl/libglx vendor.

  [ Andreas Beckmann ]
  * libgl1: Add Breaks against glx-diversions (<< 0.8) which did not divert
    libGL.so.1.0.0.
  * libglvnd0: Add Breaks+Replaces: libgldispatch0-nvidia which also shipped
    libGLdispatch.so.0.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 01 Sep 2017 11:15:04 +0300

libglvnd (0.2.999+git20170802-2) unstable; urgency=medium

  * libglvnd0.symbols: Fix a typo.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 02 Aug 2017 12:27:51 +0300

libglvnd (0.2.999+git20170802-1) unstable; urgency=medium

  * New upstream snapshot.
  * libglx0.symbols: Updated.