@@ -3,13 +3,15 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-override_dh_install:
+override_dh_auto_install:
+	dh_auto_install
 	find debian/tmp -name '*.la' -delete
 
 	# drop GLESv1
 	rm -f debian/tmp/usr/lib/*/libGLESv1*
 
-	dh_install --fail-missing
+override_dh_missing:
+	dh_missing --fail-missing
 
 # needs X
 override_dh_auto_test:
