@@ -5,6 +5,7 @@ libglvnd (1.0.0-2) UNRELEASED; urgency=medium
     (Closes: #870445)
   * Add bug-control file to report whether the proprietary nvidia driver is
     installed.
+  * Switch to dh_missing --fail-missing.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 25 Nov 2017 14:59:46 +0000
 
